[tool.poetry]
name = "repl_python3_Riff-Raff-Discord-Bot"
version = "0.1.0"
description = ""
authors = ["lordryn <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.20.0"
discord = "^1.7.3"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
