[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["lordryn <<>>"]
description = ""
name = "repl_python3_Riff-Raff-Discord-Bot"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.7.3"
python = "^3.8"
python-dotenv = "^0.20.0"
pytz = "^2022.1"
[tool.poetry.dev-dependencies]
